# textify

./: .gitignore  Cargo.toml  Makefile  README.md
src/: core.rs  main.rs  perf.rs  utils.rs
