[package]
name = "textify"
version = "1.1.0"
edition = "2024"
description = "Convert git repository to a text file"
license = "MIT"
authors = ["friz() <frizadiga@gmail.com>"]
repository = "https://github.com/frizadiga/textify"
readme = "README.md"
keywords = ["git", "cli", "text", "converter"]
categories = ["cli"]

[[bin]]
name = "textify"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
walkdir = "2.4"
indicatif = "0.17"
console = "0.15"
regex = "1.10"
rayon = "1.8"
memmap2 = "0.9"
